# battlesnake_exploration

./: .replit  Cargo.toml  README.md  Rocket.toml
logs/: agg_results_20250219_152432.json  agg_results_20250222_182242.json  log_results_20250219_152432.json  log_results_20250222_182242.json
scripts/: .gitignore  compare.py  eval.py  test.sh
src/: flood_fill.rs  game.rs  main.rs  pathfinding.rs  strategy.rs  utils.rs
