[package]
name = "battlesnake_exploration"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json", "tls", "uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
